@@ -1,3 +1,13 @@
+2009-01-20  Darin Fisher  <darin@chromium.org>
+
+        Reviewed by Sam Weinig.
+
+        https://bugs.webkit.org/show_bug.cgi?id=23391
+        Upstream plugins/chromium/
+
+        * plugins/chromium: Added.
+        * plugins/chromium/PluginDataChromium.cpp: Added.
+
 2009-01-19  Steve Falkenburg  <sfalken@apple.com>
 
         Fix Windows release build.
